--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=PT+Serif&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/jyb6qri.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/2fb07d68d9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
+<!--
 <nav class="navbar navbar-expand-lg">
 
     <div class="container">
@@ -61,6 +65,100 @@
         <section>
             <a href="https://www.linkedin.com/in/karo-voets-731096261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
         </section>
+    </div>
+</main>
+-->
+
+<nav class="navbar navbar-expand-lg">
+
+    <div class="container">
+        <a href="index.html" class="navbar-brand">
+            <img id="nav" src="assets/Logo.png" alt="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link homepage homelink" target="_self" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" target="_self" href="about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link webshop" target="_self" href="mywork.html">My work</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link contactlink" target="_self" href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<main>
+    <div class="container">
+        <div class="row top">
+            <div class="col-1"></div>
+            <div class="col-5">
+                <h1>Contact</h1>
+            </div>
+            <div class="col-6"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <a><i id="email" class="fa-solid fa-envelope"></i></a>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <a><i id="phone" class="fa-solid fa-phone"></i></a>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <a href="https://www.facebook.com/karo.voets" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <a href="https://www.instagram.com/karovoets/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+            <div class="col-12 col-md-2">
+                <div class="row pb-4">
+                    <div class="col-3 col-md-0"></div>
+                    <div class="col-6 col-md-12">
+                        <a href="https://www.linkedin.com/in/karo-voets-731096261/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    </div>
+                    <div class="col-3 col-md-0"></div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
     </div>
 </main>
 
