--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="col-12 order-md-2 col-md-6 foto mb-5">
-                <img id="ik" src="assets/mezelf.png" alt="Foto van mezelf">
+                <img id="ik" src="assets/mezelf2.png" alt="Foto van mezelf">
             </div>
         </div>
     </div>
