--- a/mywork.html
+++ b/mywork.html
@@ -102,6 +102,7 @@
                     <div class="col-3 col-md-0"></div>
                 </div>
             </div>
+            <!--
             <div class="col-12 col-md-2">
                 <div class="row pb-4 mb-5">
                     <div class="col-3 col-md-0"></div>
@@ -113,7 +114,7 @@
                     <div class="col-3 col-md-0"></div>
                 </div>
             </div>
-            <div class="col-md-1"></div>
+            <div class="col-md-1"></div>-->
         </div>
     </div>
 </main>
