--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="row button_cv">
                     <div class="col-1"></div>
                     <div class="col-4 cv">
-                        <a href="assets/Curriculum_Vitae_Karo_Voets.pdf" download="CURRICULUM_VITAE_Karo_Voets">My
+                        <a href="assets/KaroVoets_CV.pdf" download="CURRICULUM_VITAE_Karo_Voets">My
                             resume</a>
                     </div>
                     <div class="col-7"></div>
