--- a/mywork.html
+++ b/mywork.html
@@ -113,8 +113,8 @@
                     </div>
                     <div class="col-3 col-md-0"></div>
                 </div>
-            </div>
-            <div class="col-md-1"></div>-->
+            </div>-->
+            <div class="col-md-1"></div>
         </div>
     </div>
 </main>
